--- a/css/main.css
+++ b/css/main.css
@@ -73,10 +73,15 @@ footer {
 
   #column-3 {
     background-color: #5A3673;
+    width: 100%;
   }
 
   footer {
     background-color: #5A3673;
+  }
+
+  .col-3{
+    width: 50%;
   }
   
 }
@@ -98,10 +103,15 @@ footer {
 
   #column-3 {
     background-color: #F29D52;
+    width: 33.3%;
   }
 
   footer {
     background-color: #115D8C;
+  }
+
+  .col-3 {
+    width: 33.3%;
   }
    
 }
